# ChangeLog for sci-libs/openfoam-kernel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  openfoam-kernel-1.5_p20080905.ebuild:
  Use ${P} in SRC_URI

  08 Sep 2008; Oliver Borm (boroli) <oli.borm@web.de>
  -openfoam-kernel-1.5.ebuild, +openfoam-kernel-1.5_p20080905.ebuild:
  New patche sets

  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  openfoam-kernel-1.4.1_p20080827.ebuild,
  -files/openfoam-kernel-1.4.1_p20080827.patch:
  Move big patch to external source

  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -openfoam-kernel-1.4.1_p20080131.ebuild:
  Drop old version

  28 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-kernel-1.4.1_p20080827.ebuild,
  +files/openfoam-kernel-compile-1.4.1_p20080827.patch,
  +files/openfoam-kernel-1.4.1_p20080827.patch:
  Update patches for the OpenFOAM Kernel

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-kernel-1.4.1_p20080131.ebuild, openfoam-kernel-1.5.ebuild:
  Changed version dependencies

  28 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-kernel-1.5.ebuild:
  Fixed some errors due to wrong relative paths.

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-kernel-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-kernel-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5

  08 Apr 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-kernel-1.4.1_p20080131.ebuild:
  Just changed the unpack command and source, according to the new sources
  from dev.ge.org

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  openfoam-kernel-1.4.1_p20080131:
  Actually unpack the patchset

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -openfoam-kernel-1.4.1_p20080131.patch,
  -openfoam-kernel-compile-1.4.1_p20080131.patch,
  openfoam-kernel-1.4.1_p20080131:
  Move patchset to dev.ge.org
