@@ -1,10 +1,10 @@
 AUX OpenFOAM-1.5-compile.patch 15006 RMD160 ba8423526b5244e3c30d9d38830a2fe79e3c2a1a SHA1 7d275039cea1fe8a3c28fafeda1fef3665360f83 SHA256 6cb940b6c559a846ec65184db8f7c7966d1bef105d5bdad6ca4afd3f1b4d5b89
 AUX openfoam-kernel-compile-1.4.1_p20080827.patch 6143 RMD160 ab03b9d55ee2d6eb3515fe2430e42f2204177bb9 SHA1 8301b591701f2bf6cb182f1cd415d0348e46d98b SHA256 999098d347d417ff88724ea30c6a18b7cc3a8bbecfcb23b5cfdcbe17afdb58c4
-DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
-DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
+DIST OpenFOAM-1.4.1.General.tgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
+DIST OpenFOAM-1.5.General.tgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
 DIST openfoam-kernel-1.4.1_p20080827.patch 31197 RMD160 83bbf48def96090dfe5ba37e702a3ce4ce3f331a SHA1 ece3c78b456ec4e82374c53c82aaa9bc2b45b5bc SHA256 3c3702a7539ca2d54ce09e4cdd14b8425d598d6ff8c811dea7d407c8a5bfa9cd
 DIST openfoam-kernel-1.5_p20080905.patch 364112 RMD160 e91a0a0c964afa9ca4a37c1a32c1714f7b4a2fe3 SHA1 d3e1b77993f7dc22ffbc7274d90b83f326274b1b SHA256 4aac71627d45f981a4bfd371fcdcca732be8ce5654a66824276f56f099830ab7
-EBUILD openfoam-kernel-1.4.1_p20080827.ebuild 2094 RMD160 04be86ea4cd7e555818aaed97ce420ccfe3fc491 SHA1 d7acc74e888b9906251c9d4490525a0d7a695f5e SHA256 a161fc0fffc18fcf635638a7a1abcf529ed17aa6462be60ffc57a3dd614f3674
-EBUILD openfoam-kernel-1.5_p20080905.ebuild 1330 RMD160 ab2a38804054b8abe17ac562e4b9200b0f0a8f85 SHA1 1364122f5f1397e6cbb8c088979a4fd8e849dd4c SHA256 0f94647497c6e5656577d20a9f5ae7909abd59ca99ad69543ad5d6c29ca5884d
-MISC ChangeLog 2699 RMD160 e8f98a80bbf6c91470b69cc05d1af8c03859ab2e SHA1 f92703903b1aa4a047d96975ddc85791f8cdc1dc SHA256 7bb0c1cab8b370121efdb425c5f5390afc00d3ed52d42df934ac65c615fc1078
+EBUILD openfoam-kernel-1.4.1_p20080827.ebuild 2122 RMD160 9773ac64eec702f208113fbee385d7162c298637 SHA1 84edf75a97fb70af86fbb4e0994abd4c5eca8985 SHA256 fa3d9c925960ca2367d99d663160748c8345cf756e644e9396dfaa53ed71c011
+EBUILD openfoam-kernel-1.5_p20080905.ebuild 1394 RMD160 bae58fdba47ec3a2b42b6063220ed44d8118f9fc SHA1 dc5d2e5ff484b6c0c73aa46a430a666bc7d5973b SHA256 7c039caeeda508726650819572ca8af24c26890725794dc6a6b867038b28eb40
+MISC ChangeLog 2909 RMD160 32a8ce72df3885087c1b22a5d82b8e37d8b17f07 SHA1 c9a7b508a484dd67b00ee3c0d157cc5358fbb232 SHA256 bd077b54a0265ee0b31423e4d7b2783f9df040954d494e5d23ad7214e0e112f4
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
